dons_tests/valid_kxi/dec_type_check.kxi
void main(){
    int x = 1;
    char y = 'c';
    string z = "string";
    bool b = true;
}
