dons_tests/invalid_kxi/bad_dec_type_check.kxi
void main(){ bool x = 1;
    int y = 'c';
    char z = \"string\";
    string b = true;
}
